--- a/.github/workflows/generate-sbom.yml
+++ b/.github/workflows/generate-sbom.yml
@@ -3,7 +3,7 @@ name: Generate NPM SBOM
 on:
   push:
     branches:
-      - sbom-testing # TO DO: Remove
+      - sbom-testing # TO DO: Remove 
   release:
     types: [published]
   workflow_dispatch:
@@ -68,12 +68,12 @@ jobs:
           name: sbom
           path: ${{ env.PRODUCT_PATH }}/bom.json
 
-#   store-sbom-data: # stores sbom and metadata in a predefined format for otterdog to pick up
-#     needs: ["generate-sbom"]
-#     uses: eclipse-csi/workflows/.github/workflows/store-sbom-data.yml@main
-#     with:
-#       projectName: "theia"
-#       projectVersion: ${{ needs.generate-sbom.outputs.project-version }}
-#       bomArtifact: "sbom"
-#       bomFilename: "bom.json"
-#       parentProject: "2b55dbe6-7a7e-4659-a803-babf4138e03f"
+  store-sbom-data: # stores sbom and metadata in a predefined format for otterdog to pick up
+    needs: ["generate-sbom"]
+    uses: eclipse-csi/workflows/.github/workflows/store-sbom-data.yml@main
+    with:
+      projectName: "theia"
+      projectVersion: ${{ needs.generate-sbom.outputs.project-version }}
+      bomArtifact: "sbom"
+      bomFilename: "bom.json"
+      parentProject: "2b55dbe6-7a7e-4659-a803-babf4138e03f"
