--- a/.github/workflows/generate-sbom.yml
+++ b/.github/workflows/generate-sbom.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Generate SBOM
         run: |
-          cdxgen -r -o ${{ env.PRODUCT_PATH }}/bom.json --deep
+          cdxgen -r -o ${{ env.PRODUCT_PATH }}bom.json --deep
 
       - name: Upload SBOM as artifact
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
